--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/abhishek-mane/graphql-learning#readme",
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.167",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.20",
@@ -28,6 +29,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "apollo-server": "^2.19.1",
+    "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.3"
   }
