--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
       "preLaunchTask": "tsc: build - tsconfig.json",
       "outFiles": ["${workspaceFolder}/**/*.js"],
       "env": {
-        "NODE_ENV": "development"
+        "NODE_ENV": "development",
+        "MONGO_URI": "mongodb+srv://****:****@graphql-learning.m3txs.mongodb.net/<dbname>?retryWrites=true&w=majority"
       }
     }
   ]
