--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
       "outFiles": ["${workspaceFolder}/**/*.js"],
       "env": {
         "NODE_ENV": "development",
-        "MONGO_URI": "mongodb+srv://****:****@graphql-learning.m3txs.mongodb.net/<dbname>?retryWrites=true&w=majority"
+        "MONGO_URI": "mongodb+srv://****:****@graphql-learning.m3txs.mongodb.net/sample_analytics?retryWrites=true&w=majority"
       }
     }
   ]
